--- a/Node_Module/public/styles/style.css
+++ b/Node_Module/public/styles/style.css
@@ -1,44 +1,74 @@
 body {
-  background-image: url(http://wallpaper21.com/wp-content/uploads/2017/08/Neon-Heart-Free-1920x-px-.-KB-AbstractLove.-Nike.-Music-Note-wallpaper-wpt7407445.jpg);
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
-  background-blend-mode: overlay;
-  background-color: rgba(0, 0, 0, .65);
-  color: white;
+    background-image: url(http://wallpaper21.com/wp-content/uploads/2017/08/Neon-Heart-Free-1920x-px-.-KB-AbstractLove.-Nike.-Music-Note-wallpaper-wpt7407445.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: overlay;
+    background-color: rgba(0, 0, 0, .65);
+    color: white;
 }
 
 form {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: inset 0 0 35px rgba(0, 200, 255, .65);
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, .2);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: inset 0 0 35px rgba(0, 200, 255, .65);
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, .2);
 }
 
 .btn-submit {
-  background-color: transparent;
-  border-radius: 5px;
-  padding: 5px;
-  border: none;
-  box-shadow: inset 0 0 4px rgba(0, 200, 255, 1);
-  color: white;
-  transition: .3s;
+    background-color: transparent;
+    border-radius: 5px;
+    padding: 5px;
+    border: none;
+    box-shadow: inset 0 0 4px rgba(0, 200, 255, 1);
+    color: white;
+    transition: .3s;
 }
 
 .btn-submit:hover {
-  box-shadow: inset 0 0 100px rgba(0, 200, 255, 1);
+    box-shadow: inset 0 0 100px rgba(0, 200, 255, 1);
 }
 
 .form-control {
-  color: white !important;
-  background-color: transparent;
-  transition: .3s ease;
+    color: white !important;
+    background-color: transparent;
+    transition: .3s ease;
 }
 
 .form-control:focus {
-  background-color: rgba(0, 200, 255, .3);
-  transform: scale(1.1);
+    background-color: rgba(0, 200, 255, .3);
+    transform: scale(1.1);
+}
+
+.search-group>* {
+    border-radius: 0;
+    background-color: transparent;
+    border: none;
+}
+
+.search-group {
+    border-radius: .25rem;
+}
+
+.nav-link {
+    transition: .3s ease-in-out
+}
+
+.nav-item:hover,
+.active {
+    background-color: #1b1e21;
+}
+
+.profile-img {
+    height: 40px;
+    width: 40px;
+    border: 1px solid;
+    border-radius: 50%;
+}
+
+.transparent {
+    background-color: transparent;
 }
