--- a/Node_Module/views/dashboard.ejs
+++ b/Node_Module/views/dashboard.ejs
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title class="user">Innovative Solutions &#11044; Logged in as </title>
+  <title>Innovative Solutions &#11044; Logged in as
+    <%= user%>
+  </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
   <link rel="stylesheet" href="./styles/style.css">
@@ -26,11 +28,16 @@
       <li class="p-3 nav-item nav-link">Listings</li>
       <li class="p-3 nav-item nav-link">Transaction History</li>
     </ul>
-    <div class="navbar-brand">
-      <span class="lead user"></span>
-      <img src="https://orig00.deviantart.net/6a12/f/2014/195/4/4/kurisu_makise_by_animeprofileavatars-d7qqa8s.jpg" alt="Makise, Kurisu"
-        class="profile-img">
-        <a href ="/">Logout</a>
+    <div class="navbar-brand dropdown">
+      <button class="dropdown-toggle" data-toggle="dropdown" id="profileDD">
+        <span class="lead">
+          <%= user%>
+        </span>
+        <img src="https://orig00.deviantart.net/6a12/f/2014/195/4/4/kurisu_makise_by_animeprofileavatars-d7qqa8s.jpg" class="profile-img">
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="/">Logout</a>
+      </div>
     </div>
   </nav>
   <div class="container">
@@ -103,4 +110,8 @@
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</body>
+
+</html>
