--- a/Node_Module/views/dashboard.ejs
+++ b/Node_Module/views/dashboard.ejs
@@ -9,7 +9,7 @@
   </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/dashboard.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
       <li class="p-3 nav-item nav-link">Transaction History</li>
     </ul>
     <div class="navbar-brand dropdown">
-      <button class="dropdown-toggle" data-toggle="dropdown" id="profileDD">
+      <button class="dropdown-toggle transparent" data-toggle="dropdown" id="profileDD">
         <span class="lead">
           <%= user%>
         </span>
@@ -48,7 +48,7 @@
         <th>ClientID</th>
         <th>Name</th>
         <th>Accomodation</th>
-        <th>Contanct</th>
+        <th>Contact</th>
         <th>Date Requested</th>
         <th>Duration of Stay</th>
         <th>Action</th>
