Added logout redirect

--- a/Node_Module/views/dashboard.ejs
+++ b/Node_Module/views/dashboard.ejs
@@ -36,7 +36,7 @@
         <img src="https://orig00.deviantart.net/6a12/f/2014/195/4/4/kurisu_makise_by_animeprofileavatars-d7qqa8s.jpg" class="profile-img">
       </button>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="/">Logout</a>
+        <a class="dropdown-item" href="/logout">Logout</a>
       </div>
     </div>
   </nav>
