--- a/Node_Module/views/index.ejs
+++ b/Node_Module/views/index.ejs
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <body>
