--- a/Node_Module/views/dashboard.ejs
+++ b/Node_Module/views/dashboard.ejs
@@ -49,6 +49,8 @@
       </div>
     </div>
   </nav>
+
+
   <div class="row">
     <div class="card col s10 m10 offset-m1">
       <h2 class="center">Home</h2>
@@ -64,50 +66,34 @@
             <th>Unit Address</th>
             <th>Client ID</th>
             <th>Name</th>
-            <th>Accomodation</th>
+            <th>Number of Tenants</th>
             <th>Contact</th>
             <th>Email</th>
-            <th>Date Requested</th>
-            <th>Duration of Stay</th>
+            <th>Reservation Date</th>
+            <th>Checkout Date</th>
             <th>Action</th>
           </tr>
         </thead>
 
         <tbody>
-          <tr>
-            <td>001 Bakakeng Norte</td>
-            <td>00321</td>
-            <td>Client 1</td>
-            <td>2 male
-              <br>1 female</td>
-            <td>09461654651</td>
-            <td>client1@mail.com</td>
-            <td>04/15/2018</td>
-            <td>4 days</td>
-            <td>
-              <a class="waves-effect waves-light btn">Accept</a>
-              <br>
-              <br>
-              <a class="waves-effect waves-light btn">Deny</a>
-            </td>
-          </tr>
-          <tr>
-            <td>004 Bakakeng Norte</td>
-            <td>00423</td>
-            <td>Client 2</td>
-            <td>3 male
-              <br>2 female</td>
-            <td>09565317113</td>
-            <td>client2@mail.com</td>
-            <td>03/10/2018</td>
-            <td>18 days</td>
-            <td>
-              <a class="waves-effect waves-light btn">Accept</a>
-              <br>
-              <br>
-              <a class="waves-effect waves-light btn">Deny</a>
-            </td>
-          </tr>
+          <% for(var i = 0; i < pendingReq.length; i++) { %>
+            <tr>
+              <td><%= pendingReq[i].unit_address%></td>
+              <td><%= pendingReq[i].client_id%></td>
+              <td><%= pendingReq[i].client_fname%> <%= pendingReq[i].client_lname%></td>
+              <td><%= pendingReq[i].no_of_tenents%></td>
+              <td><%= pendingReq[i].client_phoneno%></td>
+              <td><%= pendingReq[i].client_email%></td>
+              <td><%= pendingReq[i].res_date%></td>
+              <td><%= pendingReq[i].checkout_date%></td>
+              <td>
+                <div class="btn-group">
+                  <button class="btn">Accept</button>
+                  <button class="btn red">Deny</button>
+                </div>
+              </td>
+            </tr>
+          <% } %>
         </tbody>
       </table>
       <div class="row">
@@ -133,34 +119,24 @@
         </thead>
 
         <tbody>
-          <tr>
-            <td>002 Bakakeng Norte</td>
-            <td>00980</td>
-            <td>Client 3</td>
-            <td>1 male
-              <br>1 female</td>
-            <td>09255081892</td>
-            <td>client3@mail.com</td>
-            <td>03/29/2018</td>
-            <td>6 days</td>
-            <td>
-              <a class="waves-effect waves-light btn">Cancel</a>
-            </td>
-          </tr>
-          <tr>
-            <td>004 Bakakeng Norte</td>
-            <td>00413</td>
-            <td>Client 4</td>
-            <td>5 male
-              <br>2 female</td>
-            <td>09565425672</td>
-            <td>client4@mail.com</td>
-            <td>06/10/2018</td>
-            <td>11 days</td>
-            <td>
-              <a class="waves-effect waves-light btn">Cancel</a>
-            </td>
-          </tr>
+          <% for(var i = 0; i < accepted.length; i++) { %>
+            <tr>
+              <td><%= accepted[i].unit_address%></td>
+              <td><%= accepted[i].client_id%></td>
+              <td><%= accepted[i].client_fname%> <%= accepted[i].client_lname%></td>
+              <td><%= accepted[i].no_of_tenents%></td>
+              <td><%= accepted[i].client_phoneno%></td>
+              <td><%= accepted[i].client_email%></td>
+              <td><%= accepted[i].res_date%></td>
+              <td><%= accepted[i].checkout_date%></td>
+              <td>
+                <div class="btn-group">
+                  <button class="btn">Accept</button>
+                  <button class="btn red">Deny</button>
+                </div>
+              </td>
+            </tr>
+          <% } %>
         </tbody>
       </table>
       <div class="row">
@@ -186,34 +162,24 @@
         </thead>
 
         <tbody>
-          <tr>
-            <td>005 Bakakeng Norte</td>
-            <td>00100</td>
-            <td>Client 5</td>
-            <td>3 male
-              <br>2 female</td>
-            <td>09255084321</td>
-            <td>client5@mail.com</td>
-            <td>02/22/2018</td>
-            <td>12 days</td>
-            <td>
-              <a class="waves-effect waves-light btn">Re-Admit</a>
-            </td>
-          </tr>
-          <tr>
-            <td>004 Bakakeng Norte</td>
-            <td>00413</td>
-            <td>Client 6</td>
-            <td>5 male
-              <br>2 female</td>
-            <td>09564435672</td>
-            <td>client6@mail.com</td>
-            <td>06/03/2018</td>
-            <td>9 days</td>
-            <td>
-              <a class="waves-effect waves-light btn">Re-Admit</a>
-            </td>
-          </tr>
+          <% for(var i = 0; i < decline.length; i++) { %>
+            <tr>
+              <td><%= decline[i].unit_address%></td>
+              <td><%= decline[i].client_id%></td>
+              <td><%= decline[i].client_fname%> <%= decline[i].client_lname%></td>
+              <td><%= decline[i].no_of_tenents%></td>
+              <td><%= decline[i].client_phoneno%></td>
+              <td><%= decline[i].client_email%></td>
+              <td><%= decline[i].res_date%></td>
+              <td><%= decline[i].checkout_date%></td>
+              <td>
+                <div class="btn-group">
+                  <button class="btn">Accept</button>
+                  <button class="btn red">Deny</button>
+                </div>
+              </td>
+            </tr>
+          <% } %>
         </tbody>
       </table>
       <div class="right">
