--- a/Node_Module/views/newEntry.ejs
+++ b/Node_Module/views/newEntry.ejs
@@ -50,7 +50,7 @@
   <div class="row">
     <div class="card col s10 m10 offset-m1">
       <div class="row">
-        <form class="col s12">
+        <form action="new-unit" method="post" enctype="multipart/form-data" class="col s12">
           <div class=row>
             <div class="col s3">
               <div class="row">
@@ -59,16 +59,14 @@
                     <div class="card-image">
                       <img src="/static/images/userIcon.png">
                     </div>
-                    <center>
-                      <div class="card-action">
-                        <p>Upload profile image</p>
-                        <div class="row section">
-                          <div class="col s12 m8 l9">
-                            <input type="file" id="input-file-now" class="dropify" data-default-file="">
-                          </div>
+                    <div class="card-action">
+                      <p>Upload profile image</p>
+                      <div class="row section">
+                        <div class="col s12 m8 l9">
+                          <input type="file" id="input-file-now" class="dropify" name="dormImg" required>
                         </div>
                       </div>
-                    </center>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -76,16 +74,16 @@
             <div class="col s9">
               <div class="input-field col s6">
                 <i class="material-icons prefix">home</i>
-                <input id="icon_prefix" type="text" class="validate">
+                <input id="icon_prefix" type="text" class="validate" required>
                 <label for="icon_prefix">Unit Address</label>
               </div>
               <div class="input-field col s6">
                 <i class="material-icons prefix">money</i>
-                <input id="icon_prefix" type="text" class="validate">
+                <input id="icon_prefix" type="text" class="validate" required>
                 <label for="icon_prefix">Unit Price</label>
               </div>
               <div class="input-field col s12">
-                <textarea id="textarea1" class="materialize-textarea"></textarea>
+                <textarea id="textarea1" class="materialize-textarea" required></textarea>
                 <label for="textarea1">Description</label>
               </div>
               <div class="col s12">
@@ -95,7 +93,7 @@
                 </p>
               </div>
               <div class="right">
-                <a class="waves-effect waves-light btn">save</a>
+                <button type="submit" class="waves-effect waves-light btn">save</button>
                 <a class="waves-effect waves-light btn">cancel</a>
               </div>
             </div>
@@ -104,7 +102,6 @@
       </div>
     </div>
   </div>
-
 
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="static/js/materialize.min.js"></script>
