--- a/Node_Module/views/newEntry.ejs
+++ b/Node_Module/views/newEntry.ejs
@@ -50,14 +50,14 @@
   <div class="row">
     <div class="card col s10 m10 offset-m1">
       <div class="row">
-        <form action="new-unit" method="post" enctype="multipart/form-data" class="col s12">
+        <form action="new-unit" method="post" enctype="multipart/form-data" autocomplete="off" class="col s12">
           <div class=row>
             <div class="col s3">
               <div class="row">
                 <div class="col s12 m12">
                   <div class="card">
                     <div class="card-image">
-                      <img src="/static/images/userIcon.png">
+                      <img src="<%= typeof file != 'undefined' ? file : '/static/images/userIcon.png'%>">
                     </div>
                     <div class="card-action">
                       <p>Upload profile image</p>
@@ -72,19 +72,24 @@
               </div>
             </div>
             <div class="col s9">
-              <div class="input-field col s6">
+              <div class="input-field col s4">
                 <i class="material-icons prefix">home</i>
-                <input id="icon_prefix" type="text" class="validate" required>
-                <label for="icon_prefix">Unit Address</label>
+                <input type="text" name="unitAdd" id="unitAdd" required>
+                <label for="unitAdd">Unit Address</label>
               </div>
-              <div class="input-field col s6">
+              <div class="input-field col s4">
+                <i class="material-icons prefix">accessibility</i>
+                <input type="number" name="unitCap" id="unitCap" required>
+                <label for="unitCap">Unit Capacity</label>
+              </div>
+              <div class="input-field col s4">
                 <i class="material-icons prefix">money</i>
-                <input id="icon_prefix" type="text" class="validate" required>
-                <label for="icon_prefix">Unit Price</label>
+                <input type="number" name="price" id="price" required>
+                <label for="price">Unit Price</label>
               </div>
               <div class="input-field col s12">
-                <textarea id="textarea1" class="materialize-textarea" required></textarea>
-                <label for="textarea1">Description</label>
+                <textarea id="desc" class="materialize-textarea" name="desc" required></textarea>
+                <label for="desc">Description</label>
               </div>
               <div class="col s12">
                 <p>
@@ -94,7 +99,7 @@
               </div>
               <div class="right">
                 <button type="submit" class="waves-effect waves-light btn">save</button>
-                <a class="waves-effect waves-light btn">cancel</a>
+                <a href="new-entry" class="waves-effect waves-light btn">cancel</a>
               </div>
             </div>
           </div>
