--- a/Node_Module/views/dashboard.ejs
+++ b/Node_Module/views/dashboard.ejs
@@ -256,6 +256,16 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="static/js/materialize.min.js"></script>
   <script src="static/js/init.js"></script>
+  <script>
+    $(function() {
+      if (document.URL.indexOf('#') == -1) {
+        url = document.URL+'#';
+        location = '#';
+
+        location.reload(true);
+      }
+    });
+  </script>
 </body>
 
 </html>
