--- a/Node_Module/views/static/css/components.css
+++ b/Node_Module/views/static/css/components.css
@@ -35,3 +35,19 @@
   display: flex;
   flex-direction: column;
 }
+
+.justify-contents-center {
+  justify-content: center
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mr-2 {
+  margin-right: 2rem;
+}
