--- a/Node_Module/views/index.ejs
+++ b/Node_Module/views/index.ejs
@@ -13,7 +13,7 @@
 
 <body>
   <form class="p-5" action="dashboard" method="post" autocomplete="off">
-    <h1 class="display-4 text-center">Innovative Solutions</h1>
+    <h1 class="display-4 text-center">TransientVania</h1>
     <small class="text-danger"><%= message%></small>
     <label for="user" class="lead text-center w-100">Username</label>
     <input type="text" name="username" class="form-control" id="user" placeholder="Enter your username..." required>
