--- a/Node_Module/views/newEntry.ejs
+++ b/Node_Module/views/newEntry.ejs
@@ -31,7 +31,7 @@
           <span>
             <%= user%>
           </span>
-          <%var pic; if (profilePic === null) {pic = profilePic;} else {pic='https://orig00.deviantart.net/6a12/f/2014/195/4/4/kurisu_makise_by_animeprofileavatars-d7qqa8s.jpg';}%>
+          <%var pic; if (profilePic === null) {pic = profilePic;} else {pic='static/images/userIcon.png';}%>
           <img src="<%= pic%>" alt="<%= user%>" class="profile-pic">
         </div>
       </div>
