Modified the columns of Dashboard.ejs

--- a/Node_Module/views/dashboard.ejs
+++ b/Node_Module/views/dashboard.ejs
@@ -123,11 +123,10 @@
             <th>Unit Address</th>
             <th>Client ID</th>
             <th>Name</th>
-            <th>Accomodation</th>
             <th>Contact</th>
             <th>Email</th>
-            <th>Date Requested</th>
-            <th>Duration of Stay</th>
+            <th>Check-In Date</th>
+            <th>Check-Out Date</th>
             <th>Action</th>
           </tr>
         </thead>
@@ -190,9 +189,8 @@
             <th>Accomodation</th>
             <th>Contact</th>
             <th>Email</th>
-            <th>Date Requested</th>
-            <th>Duration of Stay</th>
-            <th>Action</th>
+            <th>Check-In Date</th>
+            <th>Check-Out Date</th>
           </tr>
         </thead>
 
@@ -234,15 +232,6 @@
             <% } %>
         </tbody>
       </table>
-      <div class="right">
-        <a class="waves-effect waves-light btn" href="newEntry.html">
-          <i class="material-icons left">add</i>Add new Room</a>
-      </div>
-      <div>
-        <p>
-          <br>
-        </p>
-      </div>
     </div>
   </div>
 
